--- a/StarboundApiDocs/StarboundApiDocs/MainWindow.xaml
+++ b/StarboundApiDocs/StarboundApiDocs/MainWindow.xaml
@@ -1,31 +1,48 @@
-﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StarboundApiDocs"
-        xmlns:Custom="http://schemas.awesomium.com/winfx" x:Class="StarboundApiDocs.MainWindow"
-        mc:Ignorable="d"
-        Title="Starbound API Documentation" Height="487.216" Width="746.733" Icon="Images/help-25.ico">
-  <Grid x:Name="mainGrid" Margin="3">
+﻿<Window Title="Starbound API Documentation Viewer" Height="480" Width="920" Icon="Images/sb.ico"
+  
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:local="clr-namespace:StarboundApiDocs"
+  xmlns:Custom="http://schemas.awesomium.com/winfx" x:Class="StarboundApiDocs.MainWindow"
+  mc:Ignorable="d" Closing="WindowClosing">
+
+  <Window.Resources>
+    <DataTemplate x:Key="mdFileTemplate">
+      <Grid Margin="2">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="20"/>
+          <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <Image Source="Images/markdown.png" Margin="0,0,3,0"/>
+        <TextBlock Grid.Column="1"  ToolTip="{Binding DisplayName}" TextWrapping="NoWrap"  Text="{Binding DisplayName}"/>
+      </Grid>
+    </DataTemplate>
+  </Window.Resources>
+
+  <Grid Margin="1" x:Name="mainGrid">
     <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="1*"/>
-      <ColumnDefinition Width="2.5*"/>
+      <ColumnDefinition x:Name="leftCol" Width="0.25*"/>
+      <ColumnDefinition x:Name ="rightCol" Width="0.75*"/>
     </Grid.ColumnDefinitions>
 
-    <Label x:Name="mdCurrent" Content="currentDoc.mdg" VerticalAlignment="Top" FontWeight="Bold" Grid.Column="1" Margin="30,2,28,0" Height="20" FontSize="14" Padding="0,0,0,0"/>
+    <Label x:Name="mdCurrent" Content="no file selected" FontSize="14" FontWeight="Bold" Grid.Column="1" VerticalAlignment="Top"  Margin="30,2,2,0" Padding="0"/>
 
-
-    <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1" Grid.Column="1" Margin="5,25,0,0">
-      <WebBrowser x:Name="mdView" Grid.Column="1" Margin="0,0,0,0"/>
+    <Border BorderThickness="1" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" Grid.Column="1" Margin="5,25,0,0">
+      <WebBrowser x:Name="mdView" Grid.Column="1" Margin="0"/>
     </Border>
-    <GridSplitter x:Name="gridSplitter" Grid.Column="1" HorizontalAlignment="Left" Width="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Margin="0,25,0,0"/>
-    <Image x:Name="image" Grid.Column="1" HorizontalAlignment="Left" Height="20" Margin="7,2,0,0" VerticalAlignment="Top" Width="20" Source="Images/markdown.png"/>
-    <Button x:Name="button" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="24" Background="{x:Null}" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" Height="24" Click="SelectSBFolder">
-      <Image Source="Images/directory.png" Width="17" Height="20"/>
-    </Button>
-    <Label x:Name="label" Content="Help Files:" HorizontalAlignment="Left" Margin="26,5,0,0" VerticalAlignment="Top" Padding="0"/>
-    <ListBox x:Name="mdList" Margin="0,25,0,0" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"/>
-  </Grid>
 
+    <GridSplitter x:Name="splitter" Width="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Grid.Column="1" HorizontalAlignment="Left" Margin="0,25,0,0"/>
+
+    <Image Source="Images/markdown.png" Height="20" Width="20" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="7,2,0,0"/>
+
+    <Button Click="SelectSBFolder" ToolTip="Select Starbound installation folder..." Width="24" Height="24" Background="{x:Null}" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Left">
+      <Image Source="Images/directory.png" Height="17" Width="20"/>
+    </Button>
+
+    <TextBlock Text="Help Files:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="26,5,0,0"/>
+
+    <ListBox x:Name="mdList" SelectionChanged="FileSelected" HorizontalContentAlignment="Stretch" ItemTemplate="{DynamicResource mdFileTemplate}" ItemsSource="{Binding}" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" Margin="0,25,0,0"/>
+  </Grid>
 </Window>
