--- a/StarboundApiDocs/StarboundApiDocs/Template/template.html
+++ b/StarboundApiDocs/StarboundApiDocs/Template/template.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
-<html><head><script>
-/* script start */
-/*--script--*/
-/* script end */
-</script><style>
-/* style start */
-/*--style--*/
-/* style end */
-</style></head><body class="markdown-body" oncontextmenu="return false;">
-<!-- start content -->
-<!--content-->
-<!-- end content -->
-</body></html>
+<html>
+	<head>
+		<script>
+			/*--script--*/
+		</script>
+		<style>
+			/*--style--*/
+		</style>
+	</head>
+	<body class="markdown-body" oncontextmenu="return false;">
+		<!--content-->
+	</body>
+</html>
